# frontend.wasm

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: macos.yml  ubuntu.yml  windows-debug-deploy.yml  windows.yml
cmake/packaging/: Frontend.wasmConfig.cmake.in
docs/: architecture.md  examples.md.in  mkdocs.yml
docs/ReleaseNotes/: v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.4.1.md  v0.4.2.md  v0.4.3.md  v0.4.5.md  v0.5.0.md  v0.5.1.md  v0.6.0.md
docs/examples/: .gitignore  Classes.md  Enums.md  Functions.md  Globals.md  std::array.md  std::map.md
docs/public/: conversions.md  examples.md  faq.md  introduction.md  overloaded_functions_naming_convention.md
include/Frontend/Wasm/: frontend.hpp
src/Builders/: attributeBuilder.cpp  attributeBuilder.hpp  classBuilder.cpp  classBuilder.hpp  enumBuilder.cpp  enumBuilder.hpp  functionBuilder.cpp  functionBuilder.hpp  moduleBuilder.cpp  moduleBuilder.hpp  moduleFileBuilder.cpp  moduleFileBuilder.hpp  typeToStringBuilder.cpp  typeToStringBuilder.hpp
src/Embind/: checkType.cpp  checkType.hpp  createFunctions.cpp  createFunctions.hpp  getOverloadedFunctions.cpp  getOverloadedFunctions.hpp  joinCalls.hpp
src/Embind/Builders/: attributeBuilder.cpp  attributeBuilder.hpp  classBuilder.cpp  classBuilder.hpp  enumBuilder.cpp  enumBuilder.hpp  functionBuilder.cpp  functionBuilder.hpp  moduleBuilder.cpp  moduleBuilder.hpp  moduleFileBuilder.cpp  moduleFileBuilder.hpp  typeToStringBuilder.cpp  typeToStringBuilder.hpp
src/Embind/Helpers/: combine.hpp  split.cpp  split.hpp  string.cpp  string.hpp  trampolineClass.cpp  trampolineClass.hpp  types.cpp  types.hpp
src/Embind/Proxy/: attribute.cpp  attribute.hpp  class.cpp  class.hpp  enum.cpp  enum.hpp  function.cpp  function.hpp  module.cpp  module.hpp  moduleFile.cpp  moduleFile.hpp  typeInfo.hpp
src/EmbindProxy/: attribute.cpp  attribute.hpp  class.cpp  class.hpp  enum.cpp  enum.hpp  function.cpp  function.hpp  module.cpp  module.hpp  moduleFile.cpp  moduleFile.hpp  typeInfo.hpp
src/Frontend/Wasm/: frontend.cpp
src/Helpers/: split.cpp  string.cpp  string.hpp  types.cpp  types.hpp
src/Helpers/Embind/: checkType.cpp  checkType.hpp  createFunctions.cpp  createFunctions.hpp  joinCalls.hpp
tests/: CMakeLists.txt  README.md  arrays.cpp  classes.cpp  complex.cpp  deques.cpp  enums.cpp  filesystem_paths.cpp  functional.cpp  functions.cpp  globalVariables.cpp  inheritence.cpp  lists.cpp  maps.cpp  memberVariables.cpp  namespaceRenaming.cpp  namespaceSameAsModule.cpp  namespaces.cpp  optionals.cpp  overloadedFunctions.cpp  pairs.cpp  sets.cpp  smartPointers.cpp  templates.cpp  tuples.cpp  unordered_maps.cpp  unordered_sets.cpp  userDefined.cpp  valarrays.cpp  variants.cpp  vectors.cpp  virtualInheritence.cpp
tests/Builders/: attributeBuilder.cpp  classBuilder.cpp  enumBuilder.cpp  functionBuilder.cpp  moduleFileBuilder.cpp  typeToStringBuilder.cpp
tests/Embind/: checkType.cpp
tests/Embind/Builders/: attributeBuilder.cpp  classBuilder.cpp  enumBuilder.cpp  functionBuilder.cpp  moduleFileBuilder.cpp  typeToStringBuilder.cpp
tests/Embind/Helpers/: combine.cpp  string.cpp
tests/Embind/Proxy/: attribute.cpp  class.cpp  enum.cpp  function.cpp  module.cpp  moduleFile.cpp
tests/EmbindProxy/: attribute.cpp  class.cpp  enum.cpp  function.cpp  module.cpp  moduleFile.cpp
tests/Helpers/: string.cpp
tests/Helpers/Embind/: checkType.cpp
tests/TestUtil/include/TestStage/: paths.cpp.in  paths.hpp.in  stageFunctions.hpp
tests/TestUtil/include/TestUtil/: embindStage.cpp  embindStage.hpp  exportAsExample.hpp  parse.cpp  parse.hpp  runEmbindTest.hpp  types.hpp
tests/testStage/: .gitignore  CMakeLists.txt  README.md  package-lock.json
tests/testStage/EmscriptenStage/: .gitignore  CMakeLists.txt  defaultModule.test.js  package-lock.json  package.json
tests/testStage/EmscriptenStage/src/: myModule.cpp  run.js
tests/testStage/cmake/: GetEmscripten.cmake  GetNodeModules.cmake  build_emscripten.sh
tests/testStage/src/: myModule.cpp
tools/packaging/: CMakeLists.txt
